// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders data in table 1`] = `
<div
  class="TableContainer"
  data-testid="table"
>
  <div
    class="RushingTable"
  >
    <table>
      <colgroup>
        <col
          class="RushingTableColumn_Player"
        />
        <col
          class="RushingTableColumn_Team"
        />
        <col
          class="RushingTableColumn_Pos"
        />
        <col
          class="RushingTableColumn_Att"
        />
        <col
          class="RushingTableColumn_Att/G"
        />
        <col
          class="RushingTableColumn_Yds"
        />
        <col
          class="RushingTableColumn_Avg"
        />
        <col
          class="RushingTableColumn_Yds/G"
        />
        <col
          class="RushingTableColumn_TD"
        />
        <col
          class="RushingTableColumn_Lng"
        />
        <col
          class="RushingTableColumn_1st"
        />
        <col
          class="RushingTableColumn_1st%"
        />
        <col
          class="RushingTableColumn_20+"
        />
        <col
          class="RushingTableColumn_40+"
        />
        <col
          class="RushingTableColumn_FUM"
        />
      </colgroup>
      <tbody>
        <tr
          class="RushingTableHeader"
        >
          <th>
            Player
          </th>
          <th>
            Team
          </th>
          <th>
            Pos
          </th>
          <th>
            Att
          </th>
          <th>
            Att/G
          </th>
          <th>
            Yds
          </th>
          <th>
            Avg
          </th>
          <th>
            Yds/G
          </th>
          <th>
            TD
          </th>
          <th>
            Lng
          </th>
          <th>
            1st
          </th>
          <th>
            1st%
          </th>
          <th>
            20+
          </th>
          <th>
            40+
          </th>
          <th>
            FUM
          </th>
        </tr>
      </tbody>
      <tbody>
        <tr
          class="RushingTableRow"
          data-testid="table-row"
        >
          <td
            class="RushingTableCell"
          >
            Name
          </td>
          <td
            class="RushingTableCell"
          >
            Team
          </td>
          <td
            class="RushingTableCell"
          >
            Position
          </td>
          <td
            class="RushingTableCell"
          >
            2
          </td>
          <td
            class="RushingTableCell"
          >
            1
          </td>
          <td
            class="RushingTableCell"
          >
            20
          </td>
          <td
            class="RushingTableCell"
          >
            10
          </td>
          <td
            class="RushingTableCell"
          >
            20
          </td>
          <td
            class="RushingTableCell"
          >
            0
          </td>
          <td
            class="RushingTableCell"
          >
            10
          </td>
          <td
            class="RushingTableCell"
          >
            0
          </td>
          <td
            class="RushingTableCell"
          >
            0
          </td>
          <td
            class="RushingTableCell"
          >
            0
          </td>
          <td
            class="RushingTableCell"
          >
            0
          </td>
          <td
            class="RushingTableCell"
          >
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="PaginationButtons"
  >
    <button
      disabled=""
    >
      Prev
    </button>
    Page 1 of 0
    <button>
      Next
    </button>
  </div>
</div>
`;

exports[`renders empty table 1`] = `
<div
  class="TableContainer"
  data-testid="table"
>
  <div
    class="RushingTable"
  >
    <table>
      <colgroup>
        <col
          class="RushingTableColumn_Player"
        />
        <col
          class="RushingTableColumn_Team"
        />
        <col
          class="RushingTableColumn_Pos"
        />
        <col
          class="RushingTableColumn_Att"
        />
        <col
          class="RushingTableColumn_Att/G"
        />
        <col
          class="RushingTableColumn_Yds"
        />
        <col
          class="RushingTableColumn_Avg"
        />
        <col
          class="RushingTableColumn_Yds/G"
        />
        <col
          class="RushingTableColumn_TD"
        />
        <col
          class="RushingTableColumn_Lng"
        />
        <col
          class="RushingTableColumn_1st"
        />
        <col
          class="RushingTableColumn_1st%"
        />
        <col
          class="RushingTableColumn_20+"
        />
        <col
          class="RushingTableColumn_40+"
        />
        <col
          class="RushingTableColumn_FUM"
        />
      </colgroup>
      <tbody>
        <tr
          class="RushingTableHeader"
        >
          <th>
            Player
          </th>
          <th>
            Team
          </th>
          <th>
            Pos
          </th>
          <th>
            Att
          </th>
          <th>
            Att/G
          </th>
          <th>
            Yds
          </th>
          <th>
            Avg
          </th>
          <th>
            Yds/G
          </th>
          <th>
            TD
          </th>
          <th>
            Lng
          </th>
          <th>
            1st
          </th>
          <th>
            1st%
          </th>
          <th>
            20+
          </th>
          <th>
            40+
          </th>
          <th>
            FUM
          </th>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="PaginationButtons"
  >
    <button
      disabled=""
    >
      Prev
    </button>
    Page 1 of 0
    <button>
      Next
    </button>
  </div>
</div>
`;
